--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,9 @@ body,
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
  
-    --primary: 222.2 47.4% 11.2%;
+    /* --primary: 248 90% 66.6%; */
+    /* --primary: 272.3 59.7% 73.7%; */
+    --primary: 280.1 60.6%49.8%;
     --primary-foreground: 210 40% 98%;
  
     --secondary: 210 40% 96.1%;
